[gd_scene load_steps=3 format=2]

[ext_resource path="res://configuration/size_option.tscn" type="PackedScene" id=1]
[ext_resource path="res://configuration/configurations.gd" type="Script" id=2]

[node name="configurations" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="window_width" parent="." instance=ExtResource( 1 )]
margin_right = 256.0
margin_bottom = 40.0
text = "Window Width"
possible_values = [ 320, 640, 960, 1080 ]
initial_value_idx = 1

[node name="window_height" parent="." instance=ExtResource( 1 )]
margin_top = 48.0
margin_right = 256.0
margin_bottom = 88.0
text = "Window Height"
possible_values = [ 480, 720, 768, 1024, 1080, 1440 ]

[node name="zoom_level" parent="." instance=ExtResource( 1 )]
margin_top = 96.0
margin_right = 256.0
margin_bottom = 136.0
text = "Zoom Level"
possible_values = [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
initial_value_idx = 3

[node name="background_transparency" parent="." instance=ExtResource( 1 )]
margin_top = 144.0
margin_right = 256.0
margin_bottom = 184.0
text = "Background Type"
possible_values = [ 1, 2, 3 ]

[connection signal="value_changed" from="window_width" to="." method="_on_window_width_value_changed"]
[connection signal="value_changed" from="window_height" to="." method="_on_window_height_value_changed"]
[connection signal="value_changed" from="zoom_level" to="." method="_on_zoom_level_value_changed"]
[connection signal="value_changed" from="background_transparency" to="." method="_on_background_transparency_value_changed"]
